--- a/.github/workflows/check-json-validity.yml
+++ b/.github/workflows/check-json-validity.yml
@@ -18,5 +18,7 @@ jobs:
       - name: Validate JSON files
         run: |
           jq empty ./json/exp.json
+          jq empty ./json/trace.json
+          jq empty ./json/perf.json
           jq empty ./workloads/workloads_db.json
           jq empty ./workloads/suite_db.json
