--- a/common/Dockerfile.common
+++ b/common/Dockerfile.common
@@ -26,6 +26,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
 COPY ./scripts/utilities.sh /usr/local/bin/utilities.sh
 COPY ./common/scripts/run_clustering.sh /usr/local/bin/run_clustering.sh
 COPY ./common/scripts/run_trace_post_processing.sh /usr/local/bin/run_trace_post_processing.sh
+COPY ./common/scripts/gather_fp_pieces.py /usr/local/bin/gather_fp_pieces.py
 COPY ./common/scripts/run_simpoint_trace.sh /usr/local/bin/run_simpoint_trace.sh
 COPY ./common/scripts/common_entrypoint.sh /usr/local/bin/common_entrypoint.sh
 COPY ./common/scripts/user_entrypoint.sh /usr/local/bin/user_entrypoint.sh
