--- a/common/Dockerfile.common
+++ b/common/Dockerfile.common
@@ -19,6 +19,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     vim \
     bc \
     unzip \
+    zip \
     gosu
 
 
