--- a/common/Dockerfile.common
+++ b/common/Dockerfile.common
@@ -27,7 +27,7 @@ COPY ./scripts/utilities.sh /usr/local/bin/utilities.sh
 COPY ./common/scripts/run_clustering.sh /usr/local/bin/run_clustering.sh
 COPY ./common/scripts/run_trace_post_processing.sh /usr/local/bin/run_trace_post_processing.sh
 COPY ./common/scripts/gather_fp_pieces.py /usr/local/bin/gather_fp_pieces.py
-COPY ./common/scripts/run_simpoint_trace.sh /usr/local/bin/run_simpoint_trace.sh
+COPY ./common/scripts/run_simpoint_trace.py /usr/local/bin/run_simpoint_trace.py
 COPY ./common/scripts/minimize_trace.sh /usr/local/bin/minimize_trace.sh
 COPY ./common/scripts/common_entrypoint.sh /usr/local/bin/common_entrypoint.sh
 COPY ./common/scripts/user_entrypoint.sh /usr/local/bin/user_entrypoint.sh
@@ -46,6 +46,7 @@ WORKDIR $tmpdir
 # DynamoRIO package
 RUN cd $tmpdir && wget https://github.com/DynamoRIO/dynamorio/releases/download/release_10.0.0/DynamoRIO-Linux-10.0.0.tar.gz && tar -xzvf DynamoRIO-Linux-10.0.0.tar.gz
 ENV DYNAMORIO_HOME=$tmpdir/DynamoRIO-Linux-10.0.0/
+RUN chmod 777 $tmpdir/DynamoRIO-Linux-10.0.0/lib64/release/libdynamorio.so
 
 # Build fingerprint client
 COPY fingerprint_src $tmpdir/fingerprint_src/
