--- a/workloads/memcached/Dockerfile
+++ b/workloads/memcached/Dockerfile
@@ -15,5 +15,8 @@ WORKDIR $tmpdir
 RUN cd $tmpdir && git clone https://github.com/shaygalon/memcache-perf.git
 RUN cd memcache-perf && make
 
+WORKDIR /home/$username
+USER $username
+
 # Start your application
 CMD ["/bin/bash"]
