Define workload-specific root/user_entrypoint.sh common/scripts/root_entrypoint.sh common/scripts/user_entrypoint.sh are executed when a docker container is executed with --user=root/user workloads/<image_name>/workload_root_entrypoint.sh workloads/<image_name>/workload_user_entrypoint.sh are appended to the common entrypoint
To run an autoware workload with a user, it needs some environment
variables set again
workloads/autoware/workload_user_entrypoint.sh includes a required
enviroment setup

--- a/workloads/autoware/Dockerfile
+++ b/workloads/autoware/Dockerfile
@@ -111,5 +111,7 @@ RUN source /opt/ros/$ROS_DISTRO/setup.bash && \
     source $tmpdir/autoware/install/setup.bash && \
     env HOME="$tmpdir" dlr simulation run -p yabloc -l play_rate:=0.5
 
+COPY ./workloads/autoware/workload_user_entrypoint.sh /usr/local/bin/workload_user_entrypoint.sh
+
 # Default command
 CMD ["/bin/bash"]
