--- a/common/Dockerfile.common
+++ b/common/Dockerfile.common
@@ -20,7 +20,8 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     bc \
     unzip \
     zip \
-    gosu
+    gosu \
+    linux-tools-generic
 
 # Copy workflow simpoint/no_simpoint script
 COPY ./scripts/utilities.sh /usr/local/bin/utilities.sh
@@ -29,7 +30,7 @@ COPY ./common/scripts/run_trace_post_processing.sh /usr/local/bin/run_trace_post
 COPY ./common/scripts/gather_fp_pieces.py /usr/local/bin/gather_fp_pieces.py
 COPY ./common/scripts/run_simpoint_trace.py /usr/local/bin/run_simpoint_trace.py
 COPY ./common/scripts/minimize_trace.sh /usr/local/bin/minimize_trace.sh
-COPY ./common/scripts/common_entrypoint.sh /usr/local/bin/common_entrypoint.sh
+COPY ./common/scripts/root_entrypoint.sh /usr/local/bin/root_entrypoint.sh
 COPY ./common/scripts/user_entrypoint.sh /usr/local/bin/user_entrypoint.sh
 COPY ./common/scripts/run_memtrace_single_simpoint.sh /usr/local/bin/run_memtrace_single_simpoint.sh
 COPY ./common/scripts/run_pt_single_simpoint.sh /usr/local/bin/run_pt_single_simpoint.sh
@@ -76,6 +77,9 @@ RUN cd $tmpdir/ && \
 
 RUN cd $tmpdir/ && git clone https://github.com/litz-lab/scarab
 RUN pip3 install -r $tmpdir/scarab/bin/requirements.txt
+
+# Install PMU tools
+RUN cd $tmpdir && git clone https://github.com/andikleen/pmu-tools.git
 
 ENV DOCKER_BUILDKIT 1
 ENV COMPOSE_DOCKER_CLI_BUILD 1
