--- a/common/Dockerfile.common
+++ b/common/Dockerfile.common
@@ -21,7 +21,8 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     unzip \
     zip \
     gosu \
-    linux-tools-generic
+    linux-tools-generic \
+    gdb
 
 # Copy workflow simpoint/no_simpoint script
 COPY ./scripts/utilities.sh /usr/local/bin/utilities.sh
