Add geekbench traces and simpoints (four frontend-bounded workloads)

--- a/workloads/geekbench/Dockerfile
+++ b/workloads/geekbench/Dockerfile
@@ -15,7 +15,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y jq
 
 # Using Geekbench6 Pro requires a license key and the its user email
 # For Litz Lab users, get the license from the traces dir and then copy them into the current dir
-COPY ./license.json $tmpdir/Geekbench-6.3.0-Linux/license.json
+COPY ./workloads/geekbench/license.json $tmpdir/Geekbench-6.3.0-Linux/license.json
 
 # Unlock Geekbench6 using the license json file
 RUN cd $tmpdir/Geekbench-6.3.0-Linux && \
