--- a/workloads/spec2017/Dockerfile
+++ b/workloads/spec2017/Dockerfile
@@ -27,6 +27,9 @@ RUN mkdir -p $tmpdir/cpu2017_install
 # RUN sudo mount -t iso9660 -o ro,exec,loop $tmpdir/cpu2017-1_0_5.iso $tmpdir/cpu2017_install
 
 RUN mkdir -p $tmpdir/cpu2017
+
+COPY ./workloads/spec2017/spec_env.iso $tmpdir/cpu2017
+
 # RUN cd $tmpdir/cpu2017_install && echo "yes" | ./install.sh -d $tmpdir/cpu2017
 # RUN cp $tmpdir/memtrace.cfg $tmpdir/cpu2017/config/memtrace.cfg
 # RUN cp $tmpdir/compile-538-clang.sh $tmpdir/cpu2017/benchspec/CPU
