--- a/quickstart_env.yaml
+++ b/quickstart_env.yaml
@@ -1,4 +1,4 @@
-name: statslib
+name: scarabinfra
 channels:
 - conda-forge
 dependencies:
@@ -9,3 +9,5 @@ dependencies:
   - pandas==1.4.1
   - matplotlib==3.5.1
   - numpy==1.22.2
+  - psutil==5.9.8
+  - docker==5.0.3
