Revive top_simpoint.json for github workflow

--- a/.github/workflows/check-json-validity.yml
+++ b/.github/workflows/check-json-validity.yml
@@ -20,5 +20,6 @@ jobs:
           jq empty ./json/exp.json
           jq empty ./json/trace.json
           jq empty ./json/perf.json
+          jq empty ./json/top_simpoint.json
           jq empty ./workloads/workloads_db.json
           jq empty ./workloads/workloads_top_simp.json
