--- a/quickstart_env.yaml
+++ b/quickstart_env.yaml
@@ -2,12 +2,12 @@ name: scarabinfra
 channels:
 - conda-forge
 dependencies:
-- python=3.8.10
+- python=3.12
 - pip
 - pip:
   - notebook==7.1.3
-  - pandas==1.4.1
-  - matplotlib==3.5.1
-  - numpy==1.22.2
+  - pandas>=2.1.0
+  - matplotlib>=3.8.0
+  - numpy>=1.26.0
   - psutil==5.9.8
-  - docker==5.0.3
+  - docker>=6.1.0
