--- a/workloads/autoware/my_yabloc_pose_call_pkg/package.xml
+++ b/workloads/autoware/my_yabloc_pose_call_pkg/package.xml
@@ -11,7 +11,11 @@
 
   <depend>rclcpp</depend>
   <depend>tier4_localization_msgs</depend>
+  <depend>sensor_msgs</depend>
   <depend>rosbag2_interfaces</depend>
+  <depend>cv_bridge</depend>
+  <depend>yabloc_pose_initializer</depend>
+  <depend>OpenCV</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
