--- a/workloads/autoware/euclidean_cluster/package.xml
+++ b/workloads/autoware/euclidean_cluster/package.xml
@@ -18,6 +18,7 @@
   <depend>autoware_euclidean_cluster</depend>
   <depend>autoware_point_types</depend>
   <depend>tier4_perception_msgs</depend>
+  <depend>rosbag2_transport</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
